--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <title>Yew App</title>
+    <link data-trunk rel="sass" href="style.scss" />
   </head>
 </html>
